--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -83,6 +83,7 @@ section:nth-child(odd) {
     height: 200px;
     background-color: rgb(87, 87, 87);
     box-shadow: 0px 0px 5px rgba(44, 44, 44, 0.422);
+    transition: transform 0.15s ease-in-out;
 }
 
 
@@ -112,13 +113,9 @@ section:nth-child(odd) {
 }
 
 
-.box:active {
-    background-image: linear-gradient(to right, rgba(255, 115, 0, 0.26) 20%, rgba(255, 255, 0, 0.158));
-}
 
 .box:hover {
     background-color: darkgrey;
-    transition: 0.25s;
     transform: scale(1.05);
 }
 
