--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -75,9 +75,10 @@ section:nth-child(odd) {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 30px;
     flex-wrap: wrap;
 }
+
 
 .caixas .box {
     width: 200px;
@@ -150,28 +151,8 @@ aside>h2 {
 
 }
 
-.botao {
-    padding-top: 30px;
-    margin-bottom: -30px;
-}
-
-button {
-    background-image: linear-gradient(to right, rgb(255, 115, 0) 20%, yellow);
-    font-weight: bolder;
-    border: none;
-    border-radius: 2px;
-}
-
-.botao>button,
-a {
-    color: black;
+/*
+a{
     padding: 8px;
-    text-decoration: none;
-
 }
-
-.botao>button:hover {
-
-    background-image: linear-gradient(to right, rgb(255, 85, 0) 20%, rgb(255, 132, 0));
-
-}
+*/
